# drf-playground

./: README.md  conftest.py  db.sqlite3  manage.py  pyproject.toml
drf_playground/: asgi.py  settings.py  urls.py  wsgi.py
stuff/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
stuff/migrations/: 0001_initial.py
utils/tests/: containers.py
